# benchbro

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.benchbro/: baseline.json  current.csv  current.json
.github/workflows/: ci.yml  release.yml
.tox/py314/: .tox-info.json
benchbro/: __init__.py  __main__.py  api.py  cli.py  core.py
examples/: README.md  __init__.py  e2e_benchmarks.py
examples/artifacts/: current.md
tests/: test_api_cli.py
