[project]
name = "benchbro"
version = "0.3.0"
description = "Benchmark library and CLI"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["benchmarking"]
classifiers = [
    "Development Status :: 4 - Beta",
]
dependencies = [
    "rich",
    "tomli; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "rust",
    "ty",
    "deptry",
    "pre-commit",
    "yamllint",
    "tox",
    "tomli",
]

[project.scripts]
benchbro = "python -m benchbro"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.benchbro.ini_options]
benchmark_paths = ["examples"]
