[project]
name = "benchbro"
version = "0.4.0"
description = "Benchmark library and CLI"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "benchmarking",
    "benchmark",
    "performance",
    "profiling",
    "microbenchmark",
    "latency",
    "throughput",
    "regression-testing",
    "performance-testing",
    "python",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
]
dependencies = [
    "rich",
    "tomli; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "rust",
    "ty",
    "deptry",
    "pre-commit",
    "yamllint",
    "tox",
    "tomli",
]

[project.scripts]
benchbro = "benchbro"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.benchbro.ini_options]
benchmark_paths = ["examples"]
