[project]
name = "benchbro"
version = "0.4.2"
description = "Benchmark library and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Pete Daly" }]
keywords = [
    "benchmarking",
    "benchmark",
    "performance",
    "profiling",
    "microbenchmark",
    "latency",
    "throughput",
    "regression-testing",
    "performance-testing",
    "python",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
urls = { Repository = "https://github.com/peter-daly/benchbro", Documentation = "https://github.com/peter-daly/benchbro#readme" }
dependencies = [
    "rich",
    "tomli; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "rust",
    "ty",
    "deptry",
    "pre-commit",
    "yamllint",
    "tox",
    "tomli",
]

[project.scripts]
benchbro = "benchbro.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.benchbro.ini_options]
benchmark_paths = ["examples"]
